# libpg2sdr

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  PG2SDRConfig.cmake.in  README.cubicsdr.md  README.dump1090.md  README.md  README.naming.md  config.c  device.c  dsp-types.h  dsp.c  dsp.h  dump1090.patch  errors.c  external.c  internal.h  libpg2sdr.pc.in  lpcsdr.h  test  test.c  test.h
.github/workflows/: build.yaml  docs.yaml  packaging.yaml
bandpass/: README.md  generate-bandpass-table.py
cli/pg2-rx/: CMakeLists.txt  pg2-rx.c
cli/pg2-util/: CMakeLists.txt  armada-notes.md  blink.c  device-info.c  device.c  device.h  dfu_load.c  dfu_load.h  hotplug.c  hotplug.h  image-info.c  image.c  image.h  io.c  io.h  load.c  log.c  log.h  mem_load.c  mem_load.h  meta.c  meta.h  nanojson.c  nanojson.h  pg2-util.c  reset.c  standby.c  write.c
corelib/: CMakeLists.txt  context.c  control.c  discovery.c  errors.c
debian/: changelog  control  copyright  libpg2sdr-doc.install  libpg2sdr.udev  pg2sdr-tools.install  rules
doc/: cli-pg2-rx.md  cli-pg2-util.md  firmware-update.md  install.md  internals.md  soapysdr.md  todo.md
dsp/: CMakeLists.txt  DetectStarchMix.cmake  starchgen.py  wisdom.aarch64  wisdom.arm  wisdom.x86_64
dsp/impl/: fs4_mix.benchmark.c  fs4_mix.generic.c  fs4_mix.neon.c  halfband_decimate.benchmark.c  halfband_decimate.generic.c  halfband_decimate.neon.c  unpack_raw_adc_data.benchmark.c  unpack_raw_adc_data.generic.c  unpack_raw_adc_data.neon.c
dsp/include/: dsp.h
dsp/include/dsp/: dsp-types.h  dsp.h
dsp/src/: dsp-history.inc  dsp.c  flavor_support.c
gain/: README.md  generate-gain-tables.py  lna.csv  mix.csv  sensitivity-curve.csv  vga.csv
include/: adc.h  dsp-types.h  dsp.h  firmware  internal.h  lpcsdr.h  pg2sdr.h  test.h  tuner-regs.h  tuner.h
include/internal/: adc.h  control.h  core.h  device.h  errors.h  lib.h  tuner-regs.h  tuner.h
python/: tester.py
scripts/: pg2-update-firmware
soapy/: .gitignore  CMakeLists.txt  Makefile  README.cubicsdr.md  soapy-lpcsdr.cc  soapy-lpcsdr.h  soapy-pg2sdr.cc  soapy-pg2sdr.h  soapy.h
src/: CMakeLists.txt  adc.c  bandpass.c  boot.c  config.c  context.c  control.c  debug  device.c  dsp-history.inc  dsp.c  errors.c  external.c  gain-tables.gen.c  gain.c  libusb_interface.c  neon.cmake  stream.c  test.c  tuner.c
tests/: CMakeLists.txt  adc_test.cc  dsp_test.cc  dsp_test.h  stream_test.cc  tuner_test.cc  util.cc  util.h
utils/: CMakeLists.txt  armada-notes.txt  device-info.c  device.c  device.h  dfu_load.c  dfu_load.h  firmware-util.c  hotplug.c  image-info.c  image.c  image.h  io.c  io.h  load.c  log.c  log.h  mem_load.c  mem_load.h  meta.c  meta.h  nanojson.c  nanojson.h  pg2-firmware.c  pg2-util.c  reset.c  reset.h  standby.c  write.c
